# quantlab

./: .gitignore  config.yaml  pyproject.toml
.streamlit/: config.toml
doc/: 架构设计.md  详细设计.md  需求文档.md
notebooks/: quickstart.ipynb
quantlab/: __init__.py  adjust.py  bootstrap.py  calendar.py  catalog.py  cli.py  config.py  constants.py  core.py  data_manager.py  enums.py  errors.py  retry.py  symbols.py  universe.py
quantlab/backtest/: engine.py  portfolio.py  strategies.py
quantlab/dashboard/: app.py
research/: AI有色资源_涨幅分化研判.md  a股急跌后短期反弹概率.md  th_发音_θ_ð_详解.md  兴登堡凶兆_A股适配与验证.md  兴登堡凶兆_对A股无效_证据与反驳.md  国产芯片封装龙头与估值判断.md  市场温度计_v1详细设计.md  市场温度计_设计.md  市场温度计_顶底回顾与当前研判.md  板块温度计_task.yaml  板块温度计_v1详细设计.md  温度计_加减仓决策_设计.md  白银敞口对比_601212能否抄底.md  证券化率_中美对比与中国历史高位.md  高科技板块_三窗口涨幅对比与分析.md
scripts/: cn_close_update.sh  daily_signal.py  daily_update.sh  factor_ic_report.py  gdp_update.sh  hindenburg_omen.py  hindenburg_rebuttal_plots.py  index_alert.py  index_alert.sh  lib.sh  market_position_advisor.py  market_thermometer_plot.py  notify.py  scheduler.sh  sector_crowding.py  silver_exposure_compare.py  silver_gsr_timing.py  tech_rally_start.py  tech_sector_returns.py  thermometer_line.py  turning_point.py
tests/: conftest.py  test_adjust.py  test_allocator.py  test_backtest.py  test_core.py  test_crossmarket.py  test_datamanager.py  test_factor_weights.py  test_indicators.py  test_ml.py  test_notify.py  test_portfolio.py  test_repository.py  test_signals_screener.py  test_stats.py  test_symbols.py  test_thermometer.py  test_universe.py  test_valuation_source.py
(+30 files in other folders)
